maze.lessons.maze.island.IslandMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
override def run() {
^Escaper:2: error: expected start of definition
override def run() {
         ^Escaper:7: error: expected class or object definition
def keepHandOnSideWall() {
^Escaper:43: error: Missing closing brace `}' assumed here
def keepHandOnSideWallx() {
^Escaper:43: error: Missing closing brace `}' assumed here
def keepHandOnSideWallx() {
^Escaper:43: error: expected class or object definition
def keepHandOnSideWallx() {
^Escaper:82: error: Missing closing brace `}' assumed here
}
^